--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,10 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+input {
+  font-family: inherit;
+}
 /* #endregion global styles */
 
 /* #region header */
@@ -495,3 +499,85 @@ img {
   background-color: #31d0aa;
 }
 /* #endregion footer */
+
+.modal-overlay {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-overlay.is-open {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.modal {
+  border-radius: 4px;
+  width: 408px;
+  height: 584px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background: #fcfcfc;
+  position: relative;
+  padding: 72px 24px 0;
+}
+
+.close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+}
+
+.icon-close-base {
+  border-radius: 100%;
+  fill: #e7e9fc;
+  stroke-width: 1px;
+  stroke: rgba(0, 0, 0, 0.1);
+}
+
+.icon-close-overlay {
+  margin-left: -16px;
+  fill: #2e2f42;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  align-items: center;
+}
+
+.form-title {
+  font-weight: 500;
+  text-align: center;
+}
+
+.form-label input,
+.form-label textarea {
+  display: block;
+}
+
+.form-button {
+  display: block;
+  border-radius: 4px;
+  padding-block: 16px;
+  padding-inline: 32px;
+  width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
+  color: #fff;
+}
