--- a/css/styles.css
+++ b/css/styles.css
@@ -498,6 +498,81 @@ input {
 .footer-link:focus {
   background-color: #31d0aa;
 }
+
+.footer-form {
+  margin-left: auto;
+  color: #f4f4fd;
+}
+
+.footer-form-text {
+  color: #f4f4fd;
+  margin-bottom: 16px;
+}
+
+.footer-form-container {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+
+.footer-form-label {
+}
+
+.footer-form-input {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  background-color: #2e2f42;
+  min-width: 264px;
+  height: 40px;
+  padding: 8px 16px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form-input:focus {
+  border: 1px solid #31d0aa;
+}
+
+.footer-form-input::placeholder {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.footer-button {
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+  background-color: #4d5ae5;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  white-space: nowrap;
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 8px 24px;
+  width: 165px;
+  min-width: 165px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: 0;
+}
+
+.footer-button:hover,
+.footer-button:focus {
+  background-color: #31d0aa;
+}
+
+.footer-button-icon {
+}
 /* #endregion footer */
 
 /* #region modal-overlay */
@@ -724,7 +799,8 @@ input:checked + label > .form-terms-checkbox .terms-icon {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-button:hover .form-button:focus {
+.form-button:hover,
+.form-button:focus {
   background-color: #404bbf;
 }
 
