--- a/css/styles.css
+++ b/css/styles.css
@@ -531,6 +531,7 @@ input {
   letter-spacing: 0.04em;
   color: #ffffff;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  outline: transparent;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -549,7 +550,6 @@ input {
 
 .footer-button {
   display: flex;
-  gap: 16px;
   justify-content: center;
   align-items: center;
   background-color: #4d5ae5;
